<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <ScrollView android:layout_marginBottom="50dip" android:id="@+id/ScrollView01" android:layout_height="wrap_content" android:layout_width="fill_parent">
  	<TextView 
	    android:id="@+id/about_view"
	    android:layout_width="fill_parent" 
	    android:text="@string/activity_copyright"
	    android:scrollbars="vertical" android:layout_height="wrap_content"/>
  </ScrollView>
  <RelativeLayout android:layout_marginTop="-50dip" android:gravity="bottom" android:layout_height="wrap_content" android:layout_width="fill_parent">
 	 <Button 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/activity_gpl" 
		android:id="@+id/Button_gpl_screen" 
		android:gravity="center" />
  </RelativeLayout>
  <RelativeLayout android:layout_marginTop="0dip" android:gravity="bottom" android:layout_height="wrap_content" android:layout_width="fill_parent">
    	
    	<Button 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/activity_return" 
		android:id="@+id/Button_return_to_screen_3 " 
		android:gravity="center" />
  </RelativeLayout>
	
	
</LinearLayout>
